# thesis-experiments

./: .gitignore  BENCHMARK-01-prime-sieve.md  BENCHMARK-02-memory-bandwidth.md  BENCHMARK-03-http-fanout.md  BENCHMARK-04-json-roundtrip.md  EXPERIMENT-PLAN-SCALING.md  LICENSE  README.md  runtime-choice.md
backend/io-echo/: Dockerfile  go.mod  main.go
benchmarks/: requirements.txt
benchmarks/01-prime-sieve/: analyze.py  cold_start.py  k6-load-test.js  prometheus_metrics.py  run_experiment.sh
benchmarks/02-memory-bandwidth/: analyze.py  cold_start.py  k6-load-test.js  prometheus_metrics.py  run_experiment.sh
benchmarks/03-http-fanout/: analyze.py  cold_start.py  k6-load-test.js  prometheus_metrics.py  run_experiment.sh
benchmarks/04-json-roundtrip/: analyze.py  cold_start.py  k6-load-test.js  prometheus_metrics.py  run_experiment.sh
benchmarks/shared/: binary_sizes.py  utils.py
docker/golang/01-prime-sieve/: .gitignore  Dockerfile  go.mod  (+1 more)
docker/rust/01-prime-sieve/: Cargo.toml  Dockerfile
docker/rust/01-prime-sieve/src/: main.rs
docker/rust/03-http-fanout/: Cargo.toml  Dockerfile
docker/rust/03-http-fanout/src/: main.rs
docs/: README.md
docs/benchmarks/: 01-prime-sieve.md  02-memory-bandwidth.md  03-http-fanout.md  04-json-roundtrip.md  README.md
docs/operate/: deploy.md  observability.md  output-structure.md  run-benchmarks.md  scaling-modes.md  sequential-example-model.md  teardown.md
docs/reference/: notes-on-metrics.md  repository-layout.md  runtime-choice.md  toolchain-versions.md  troubleshooting.md
docs/setup/: 01-prerequisites.md  02-infrastructure.md
k8s/01-prime-sieve/: docker-golang.yaml  docker-rust.yaml  executor.yaml  namespace.yaml  wasm-rust.yaml  wasm-tinygo.yaml
k8s/02-memory-bandwidth/: docker-golang.yaml  docker-rust.yaml  executor.yaml  namespace.yaml  wasm-rust.yaml  wasm-tinygo.yaml
k8s/03-http-fanout/: docker-golang.yaml  docker-rust.yaml  executor.yaml  io-echo.yaml  namespace.yaml  wasm-rust.yaml  wasm-tinygo.yaml
k8s/04-json-roundtrip/: docker-golang.yaml  docker-rust.yaml  executor.yaml  namespace.yaml  wasm-rust.yaml  wasm-tinygo.yaml
results/: .gitignore
results/01-prime-sieve/: binary_sizes.json  cold_start.json  docker-golang_summary.json  docker-rust_summary.json  image_sizes.json  resource_metrics.json  warm_start.json  wasm-rust_summary.json  wasm-tinygo_summary.json
results/02-memory-bandwidth/: binary_sizes.json  cold_start.json  image_sizes.json  resource_metrics.json  warm_start.json
results/03-http-fanout/: binary_sizes.json  cold_start.json  image_sizes.json  resource_metrics.json  warm_start.json
results/04-json-roundtrip/: binary_sizes.json  cold_start.json  image_sizes.json  resource_metrics.json  warm_start.json
wasm/rust/01-prime-sieve/: Cargo.toml  Dockerfile  README.md  spin.toml
wasm/rust/01-prime-sieve/src/: lib.rs  main.rs
wasm/rust/02-memory-bandwidth/: Cargo.toml  spin.toml
wasm/rust/02-memory-bandwidth/src/: lib.rs
wasm/rust/04-json-roundtrip/: Cargo.toml  spin.toml
wasm/rust/04-json-roundtrip/src/: lib.rs
wasm/wasmedge/: README.md
(+104 files in other folders)
