[package]
name    = "prime-sieve"
version = "0.1.0"
edition = "2024"

[dependencies]
axum              = "0.8.8"
tokio             = { version = "1", features = ["full"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
