[package]
name    = "prime-sieve-wasm"
version = "0.1.0"
edition = "2024"

# No async HTTP framework is available for wasm32-wasip1 (see README.md).
# Only serde_json is needed; networking is handled via std::net::TcpListener.
[dependencies]
serde_json = "1"

[profile.release]
opt-level = "s"   # minimise binary size (important for cold-start comparison)
lto       = true
strip     = true
