[package]
name = "memory-bandwidth-spin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk  = "5.2.0"
serde_json = "1"
sha2      = "0.10"
hex       = "0.4"

[package.metadata.component]
package = "component:memory-bandwidth-spin"

[profile.release]
opt-level = "s"
lto       = true
strip     = true
