[package]
name = "json-roundtrip-spin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk   = "5.2.0"
serde_json = "1"
serde      = { version = "1", features = ["derive"] }

[package.metadata.component]
package = "component:json-roundtrip-spin"

[profile.release]
opt-level = "s"
lto       = true
strip     = true
